# packages

./: CHANGES.rst  README.rst  build-yuneta-agent-deb.sh  build-yuneta-agent-debian-AMD64.sh  build-yuneta-agent-debian-ARM32.sh  build-yuneta-agent-raspberrypi-ARMhf.sh  build-yuneta-agent-rpm.sh  compila.sh  recompila.sh  update_scripts-sh  update_scripts.sh  yuneta-pull-from-github.sh
yuneta/: CMakeLists.txt
yuneta/^gobj-ecosistema/: CMakeLists.txt
yuneta/^yuneta/: CMakeLists.txt
yuneta/^yunos/: CMakeLists.txt
